test/files/neg/t1523.check
t1523.scala:4: error: too many arguments (26, expected 1) for method bug: (x: Any): Any
  def go() = bug("a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a")
                      ^
1 error
